--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <h1>NCERT BOOKS</h1>
             <a href="English/English.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">English</button></a>
             <a href="Hindi/hindi.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">Hindi</button></a>
-            <a href="Social science/Social Science.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">Social Science</button></a>
+            <a href="Social Science/Social Science.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">Social Science</button></a>
             <a href="Maths/maths.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">Mathematics</button></a>
             <a href="Science/science.html"><button style="font-family:Georgia, 'Times New Roman', Times, serif;font-size: 40px;"><img src="">Science</button></a>
         </center></div>
