--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <style>
             .bg-image {
       /* The image used */
-      background-image: url("Social science/iess4cc.jpg");
+      background-image: url("Social Science/iess4cc.jpg");
     
       /* Add the blur effect */
       filter: blur(25px);
