--- a/Maths/maths.html
+++ b/Maths/maths.html
@@ -40,7 +40,7 @@
     <a href="2.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 2</h1></button></a>
     <a href="3.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 3</h1></button></a><br>
     <a href="4.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 4</h1></button></a>
-    <a href="5.pdf" target="_blank"><button style="border-radius:15px;" disable alt="NOT IN SYLLABUS"><h1>Chapter 5</h1></button></a><br>
+    <a href="5.pdf" target="_blank"><button style="border-radius:15px;" disabled><h1>Chapter 5</h1></button></a><br>
     <a href="6.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 6</h1></button></a>
     <a href="7.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 7</h1></button></a><br>
     <a href="8.pdf" target="_blank"><button style="border-radius:15px;"><h1>Chapter 8</h1></button></a>
